feat(auth-login-register): completed login register logout
